# aoldaq-rs

./: .gitignore  Cargo.toml  NiFpga.h  README.md  aoldaq.h  build.rs
ctest/: main  main.c  perf.data
src/: capi.rs  lib.rs  nifpga.rs
src/device/: mod.rs  nifpga_device.rs
